--- a/themes/custom/drustack_bootstrap/scss/components/_tabs.scss
+++ b/themes/custom/drustack_bootstrap/scss/components/_tabs.scss
@@ -22,7 +22,7 @@ nav.tabs {
 
       &.active {
         a {
-          background: $accent-light;
+          background: $secondary;
         }
       }
     }
