--- a/themes/custom/drustack_bootstrap/scss/components/_user.scss
+++ b/themes/custom/drustack_bootstrap/scss/components/_user.scss
@@ -95,7 +95,7 @@ body.path-user {
   .field--label-inline {
     .field__label {
       width: 100px;
-      color: $primary-shade;
+      color: $secondary;
     }
 
     .field__item {
@@ -109,7 +109,7 @@ body.path-user {
 
   .field--label-above {
     .field__label {
-      color: $primary-shade;
+      color: $secondary;
     }
 
     .field__item {
