--- a/themes/custom/drustack_bootstrap/scss/components/_sidebar-collapse.scss
+++ b/themes/custom/drustack_bootstrap/scss/components/_sidebar-collapse.scss
@@ -14,30 +14,28 @@
     -moz-transition: all 0.25s ease-out;
     transition: all 0.25s ease-out;
   }
-
-  .row-offcanvas-right .sidebar-offcanvas {
+  .row-offcanvas-right
+  .sidebar-offcanvas {
     right: -41.6%;
   }
 
-  .row-offcanvas-left .sidebar-offcanvas {
+  .row-offcanvas-left
+  .sidebar-offcanvas {
     left: -41.6%;
   }
-
   .row-offcanvas-right.active {
     right: 41.6%;
   }
-
   .row-offcanvas-left.active {
     left: 41.6%;
   }
-
   .sidebar-offcanvas {
     position: absolute;
     top: 0;
     width: 41.6%;
   }
-
   #sidebar_first {
-    padding-top: 0;
+    padding-top:0;
   }
 }
+
