--- a/themes/custom/drustack_bootstrap/scss/components/_site-footer.scss
+++ b/themes/custom/drustack_bootstrap/scss/components/_site-footer.scss
@@ -3,29 +3,30 @@
  * Footer Styling.
  */
 
-.site-footer {
-  padding: $spacer 0;
+@use "sass:math";
 
-  .layout-container {
-    padding: 0 $spacer;
-  }
+.site-footer {
+    padding: $spacer 0;
+    .layout-container {
+        padding: 0 $spacer;
+    }
 }
 
 
 /* Footer Top Styling. */
 
 .site-footer__top .content {
-  margin-top: 0;
+    margin-top: 0;
 }
 
 
 /* Footer Bottom Styling. */
 
 .site-footer__bottom .block {
-  margin: ($spacer / 2) 0;
+    margin: math.div($spacer, 2) 0;
 }
 
 .site-footer__bottom .content {
-  padding: ($spacer / 2) 0;
-  margin-top: 0;
+    padding: math.div($spacer, 2) 0;
+    margin-top: 0;
 }
