--- a/themes/custom/drustack_bootstrap/scss/components/_tabledrag.scss
+++ b/themes/custom/drustack_bootstrap/scss/components/_tabledrag.scss
@@ -3,14 +3,16 @@
  * Visual styles for table drag.
  */
 
+@use "sass:math";
+
 tr.drag {
-  background-color: #fffff0;
+    background-color: #fffff0;
 }
 
 tr.drag-previous {
-  background-color: #ffd;
+    background-color: #ffd;
 }
 
 body div.tabledrag-changed-warning {
-  margin-bottom: ($spacer / 2);
+    margin-bottom: math.div($spacer, 2);
 }
