--- a/themes/custom/drustack_bootstrap/scss/_bootswatch.scss
+++ b/themes/custom/drustack_bootstrap/scss/_bootswatch.scss
@@ -1,66 +1,89 @@
-// Flatly 5.0.2
+// Litera 5.1.1
 // Bootswatch
-
-
-// Variables
-
-$web-font-path: "https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap" !default;
-@if $web-font-path {
-  @import url($web-font-path);
-}
 
 // Navbar
 
-.bg-primary {
-  .navbar-nav .show > .nav-link,
-  .navbar-nav .nav-link.active,
-  .navbar-nav .nav-link:hover,
-  .navbar-nav .nav-link:focus {
-    color: $success !important;
+.navbar {
+  font-size: $font-size-sm;
+
+  &.bg-dark {
+    background-color: $success !important;
   }
+
+  &.bg-light {
+    background-color: $white !important;
+    border: 1px solid rgba(0, 0, 0, .1);
+
+    &.navbar-fixed-top {
+      border-width: 0 0 1px;
+    }
+
+    &.navbar-fixed-bottom {
+      border-width: 1px 0 0;
+    }
+  }
+}
+
+// Typography
+
+p {
+  font-family: $font-family-serif;
+}
+
+blockquote {
+  font-style: italic;
+}
+
+footer {
+  font-size: $font-size-sm;
+}
+
+.lead {
+  color: $gray-600;
+  font-family: $font-family-sans-serif;
+}
+
+// Tables
+
+table,
+.table {
+  font-size: $font-size-sm;
 }
 
 // Navs
 
-.nav-tabs {
-  .nav-link.active,
-  .nav-link.active:focus,
-  .nav-link.active:hover,
-  .nav-item.open .nav-link,
-  .nav-item.open .nav-link:focus,
-  .nav-item.open .nav-link:hover {
-    color: $primary;
-  }
+.nav,
+.breadcrumb,
+.pagination {
+  font-size: $font-size-sm;
 }
 
-.pagination {
-  a:hover {
-    text-decoration: none;
-  }
+.dropdown-menu {
+  font-size: $font-size-sm;
 }
 
 // Indicators
 
-.badge {
-  &.bg-light {
-    color: $dark;
-  }
-}
-
 .alert {
-  border: none;
   color: $white;
+  font-size: $font-size-sm;
+
+  &,
+  p {
+    font-family: $font-family-sans-serif;
+  }
 
   a,
   .alert-link {
     color: $white;
+    font-weight: 400;
     text-decoration: underline;
   }
 
   @each $color, $value in $theme-colors {
     &-#{$color} {
       @if $enable-gradients {
-        background: $value linear-gradient(180deg, mix($body-bg, $value, 15%), $value) repeat-x;
+        background: $value linear-gradient($value, mix($body-bg, $value, 15%)) repeat-x;
       } @else {
         background-color: $value;
       }
@@ -76,11 +99,14 @@ $web-font-path: "https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0
   }
 }
 
+.badge {
+  &.bg-light {
+    color: $dark;
+  }
+}
+
 // Containers
 
-.modal,
-.toast {
-  .btn-close {
-    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'><path d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/></svg>");
-  }
+.list-group {
+  font-size: $font-size-sm;
 }
