--- a/themes/drustack_bootstrap/templates/page.html.twig
+++ b/themes/drustack_bootstrap/templates/page.html.twig
@@ -33,7 +33,10 @@
  *   comment/reply/12345).
  *
  * Regions:
+ * - page.top_header: Items for the top header region.
+ * - page.top_header_form: Items for the top header form region.
  * - page.header: Items for the header region.
+ * - page.header_form: Items for the header form region.
  * - page.highlighted: Items for the highlighted region.
  * - page.primary_menu: Items for the primary menu region.
  * - page.secondary_menu: Items for the secondary menu region.
@@ -62,20 +65,31 @@
 {# Header #}
 <header id="header" class="header" role="banner" aria-label="{{ 'Site header'|t}}">
   {% block header %}
-    {% if page.secondary_menu %}
+    {% if page.secondary_menu or page.top_header or page.top_header_form %}
       <nav{{ navbar_top_attributes }}>
       {% if container_navbar %}<div class="{{ container }}">{% endif %}
       {{ page.secondary_menu }}
+      {{ page.top_header }}
+      {% if page.top_header_form %}
+        <div class="form-inline navbar-form ml-auto">
+          {{ page.top_header_form }}
+        </div>
+      {% endif %}
       {% if container_navbar %}</div>{% endif %}
       </nav>
     {% endif %}
     <nav{{ navbar_attributes }}>
         {% if container_navbar %}<div class="{{ container }}">{% endif %}
         {{ page.header }}
-        {% if page.primary_menu %}
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-          <div class="collapse navbar-collapse" id="CollapsingNavbar">
+        {% if page.primary_menu or page.header_form %}
+          <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse" data-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+          <div class="collapse navbar-collapse justify-content-end" id="CollapsingNavbar">
             {{ page.primary_menu }}
+            {% if page.header_form %}
+              <div class="form-inline navbar-form justify-content-end">
+                {{ page.header_form }}
+              </div>
+            {% endif %}
           </div>
         {% endif %}
       {% if container_navbar %}</div>{% endif %}
